compiler/testData/diagnostics/tests/override/kt2052.kt
interface Runnable {
    fun run()
}

class C {
    fun f() {
        <!ABSTRACT_MEMBER_NOT_IMPLEMENTED!>class MyRunnable<!>(): Runnable {
        }
    }
}